@@ -9,6 +9,10 @@ import id.ac.ui.cs.advprog.afk3.model.Listing;
 import id.ac.ui.cs.advprog.afk3.repository.ListingRepository;
 import id.ac.ui.cs.advprog.afk3.repository.OrderRepository;
 import id.ac.ui.cs.advprog.afk3.service.OrderServiceImpl;
+import jakarta.persistence.EntityManager;
+import org.hibernate.Filter;
+import org.hibernate.Session;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -16,6 +20,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.*;
 import org.springframework.test.context.ActiveProfiles;
@@ -31,6 +36,10 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 @ActiveProfiles("test")
 public class OrderServiceTest {
+
+
+    @Mock
+    private EntityManager entityManager;
     @InjectMocks
     OrderServiceImpl orderService;
     @Mock
@@ -86,20 +95,30 @@ public class OrderServiceTest {
         orders.add(order2);
     }
 
+    @AfterEach
+    void dropAll(){
+        orders=null;
+    }
+
     @Test
     void testCreateOrderBuyer(){
-        Order order =  orders.get(0);
+        Order order =  orders.getFirst();
         ResponseEntity<String> re = new ResponseEntity<String>("Safira Sudarajat", HttpStatus.OK);
         ResponseEntity<String> re2 = new ResponseEntity<String>("BUYER", HttpStatus.OK);
         HttpEntity<String> entity = createHTTPHeader();
+
+        Map<String, Integer> orderPurchase = new HashMap<>();
+        for(Listing l : order.getListings()){
+            orderPurchase.put(l.getId(), l.getQuantity());
+        }
 
         Mockito.when(restTemplate.exchange(
                         "nulluser/get-role", HttpMethod.GET, entity,String.class))
                 .thenReturn(re2);
         Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
-        doReturn(order).when(orderRepository).save(order);
+        when(orderRepository.save(any(Order.class))).thenReturn(order);
         when(listingRepository.findById(order.getListings().getFirst().getId())).thenReturn(Optional.of(order.getListings().getFirst()));
-        Order result  = orderService.createOrder(order, token);
+        Order result  = orderService.createOrder(orderPurchase, token);
         verify(orderRepository, times(1)).save(any(Order.class));
         assertEquals(order.getId(), result.getId());
     }
@@ -114,11 +133,17 @@ public class OrderServiceTest {
         Mockito.when(restTemplate.exchange(
                         "nulluser/get-role", HttpMethod.GET, entity,String.class))
                 .thenReturn(re2);
+
+        Map<String, Integer> orderPurchase = new HashMap<>();
+        for(Listing l : order.getListings()){
+            orderPurchase.put(l.getId(), l.getQuantity());
+        }
+
         Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
-        doReturn(order).when(orderRepository).save(order);
+        when(orderRepository.save(any(Order.class))).thenReturn(order);
         when(listingRepository.findById(order.getListings().getFirst().getId())).thenReturn(Optional.of(order.getListings().getFirst()));
-        Order result  = orderService.createOrder(order, token);
-        verify(orderRepository, times(1)).save(order);
+        Order result  = orderService.createOrder(orderPurchase, token);
+        verify(orderRepository, times(1)).save(any(Order.class));
         assertEquals(order.getId(), result.getId());
     }
 
@@ -132,8 +157,14 @@ public class OrderServiceTest {
         Mockito.when(restTemplate.exchange(
                         "nulluser/get-role", HttpMethod.GET, entity,String.class))
                 .thenReturn(re2);
+
+        Map<String, Integer> orderPurchase = new HashMap<>();
+        for(Listing l : order.getListings()){
+            orderPurchase.put(l.getId(), l.getQuantity());
+        }
+
         Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(null);
-        assertNull(orderService.createOrder(order, token));
+        assertNull(orderService.createOrder(orderPurchase, token));
         verify(orderRepository, times(0)).save(order);
     }
 
@@ -147,23 +178,14 @@ public class OrderServiceTest {
         Mockito.when(restTemplate.exchange(
                         "nulluser/get-role", HttpMethod.GET, entity,String.class))
                 .thenReturn(re2);
+
+        Map<String, Integer> orderPurchase = new HashMap<>();
+        for(Listing l : order.getListings()){
+            orderPurchase.put(l.getId(), l.getQuantity());
+        }
+
         Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
-        assertNull(orderService.createOrder(order, token));
-        verify(orderRepository, times(0)).save(order);
-    }
-
-    @Test
-    void testCreateOrderIfInvalidUsername(){
-        Order order =  orders.get(1);
-        ResponseEntity re = new ResponseEntity(null, HttpStatus.OK);
-        ResponseEntity<String> re2 = new ResponseEntity<String>("BUYER", HttpStatus.OK);
-        HttpEntity<String> entity = createHTTPHeader();
-
-        Mockito.when(restTemplate.exchange(
-                        "nulluser/get-role", HttpMethod.GET, entity,String.class))
-                .thenReturn(re2);
-        Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(null);
-        assertNull(orderService.createOrder(order, token));
+        assertNull(orderService.createOrder(orderPurchase, token));
         verify(orderRepository, times(0)).save(order);
     }
 
@@ -182,9 +204,15 @@ public class OrderServiceTest {
         Mockito.when(restTemplate.exchange(
                         "nulluser/get-role", HttpMethod.GET, entity,String.class))
                 .thenReturn(re2);
+
+        Map<String, Integer> orderPurchase = new HashMap<>();
+        for(Listing l : order.getListings()){
+            orderPurchase.put(l.getId(), l.getQuantity());
+        }
+
         Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
         when(listingRepository.findById(order.getListings().getFirst().getId().toString())).thenReturn(Optional.of(listingExist));
-        assertThrows(IllegalArgumentException.class,()->{orderService.createOrder(order, token);});
+        assertThrows(IllegalArgumentException.class,()->{orderService.createOrder(orderPurchase, token);});
     }
 
     @Test
@@ -198,14 +226,44 @@ public class OrderServiceTest {
         Mockito.when(restTemplate.exchange(
                         "nulluser/get-role", HttpMethod.GET, entity,String.class))
                 .thenReturn(re2);
+
+        Map<String, Integer> orderPurchase = new HashMap<>();
+        for(Listing l : order.getListings()){
+            orderPurchase.put(l.getId(), l.getQuantity());
+        }
+
         Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
-        assertThrows(IllegalArgumentException.class,()->{orderService.createOrder(order, token);});
+        assertThrows(IllegalArgumentException.class,()->{orderService.createOrder(orderPurchase, token);});
     }
 
     @Test
     void testUpdateStatus(){
         Order order = orders.get(1);
-        Order newOrder = builder.reset().setCurrent(order)
+        Order newOrder = new Order();
+        order.setId(order.getId());
+        newOrder = builder.setCurrent(newOrder)
+                .addStatus(OrderStatus.WAITINGPAYMENT.name())
+                .build();
+
+        ResponseEntity<String> re = new ResponseEntity<String>("penjual1", HttpStatus.OK);
+        HttpEntity<String> entity = createHTTPHeader();
+
+        Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
+        doReturn(Optional.of(order)).when(orderRepository).findById(order.getId());
+        doReturn(newOrder).when(orderRepository).save(any(Order.class));
+        Order result = orderService.updateStatus(order.getId(), OrderStatus.SUCCESS.name(), token);
+
+        assertEquals(order.getId(), result.getId());
+        assertEquals(OrderStatus.SUCCESS.name(), result.getStatus());
+        verify(orderRepository, times(1)).save(any(Order.class));
+    }
+
+    @Test
+    void testUpdateStatusError(){
+        Order order = orders.get(1);
+        Order newOrder = new Order();
+        order.setId(order.getId());
+        newOrder = builder.setCurrent(newOrder)
                 .addStatus(OrderStatus.SUCCESS.name())
                 .build();
 
@@ -213,13 +271,27 @@ public class OrderServiceTest {
         HttpEntity<String> entity = createHTTPHeader();
 
         Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
-        doReturn(Optional.of(order)).when(orderRepository).findById(order.getId().toString());
-        doReturn(newOrder).when(orderRepository).save(any(Order.class));
+        doReturn(Optional.of(order)).when(orderRepository).findById(order.getId());
         Order result = orderService.updateStatus(order.getId(), OrderStatus.SUCCESS.name(), token);
 
-        assertEquals(order.getId(), result.getId());
-        assertEquals(OrderStatus.SUCCESS.name(), result.getStatus());
-        verify(orderRepository, times(1)).save(any(Order.class));
+        newOrder = builder.setCurrent(order)
+                .addStatus(OrderStatus.FAILED.name())
+                .build();
+
+        Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
+        doReturn(Optional.of(order)).when(orderRepository).findById(order.getId());
+        result = orderService.updateStatus(order.getId(), OrderStatus.SUCCESS.name(), token);
+        assertNull(result);
+
+        newOrder = builder.setCurrent(order)
+                .addStatus(OrderStatus.CANCELLED.name())
+                .build();
+
+        Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
+        doReturn(Optional.of(order)).when(orderRepository).findById(order.getId());
+        result = orderService.updateStatus(order.getId(), OrderStatus.SUCCESS.name(), token);
+        assertNull(result);
+
     }
 
     @Test
@@ -301,16 +373,25 @@ public class OrderServiceTest {
         ResponseEntity<String> re = new ResponseEntity<String>("penjual1", HttpStatus.OK);
         HttpEntity<String> entity = createHTTPHeader();
 
+        Session mockedSession = Mockito.mock(Session.class);
+        Filter mockedFilter = Mockito.mock(Filter.class);
+        when(entityManager.unwrap(Session.class)).thenReturn(mockedSession);
+        when(mockedSession.enableFilter("deletedProductFilter")).thenReturn(mockedFilter);
         Mockito.when(validator.getUsernameFromJWT(token)).thenReturn(re.getBody());
-
-        doReturn(Optional.of(orderHasSeller("penjual1")))
-                .when(orderRepository).findAllByListings_SellerUsername("penjual1");
+        doReturn(new ArrayList<>())
+                .when(orderRepository).findAllByListings_SellerUsername_AndStatus("penjual1", OrderStatus.FAILED.name());
+        doReturn(new ArrayList<>())
+                .when(orderRepository).findAllByListings_SellerUsername_AndStatus("penjual1", OrderStatus.SUCCESS.name());
+        doReturn(new ArrayList<>())
+                .when(orderRepository).findAllByListings_SellerUsername_AndStatus("penjual1", OrderStatus.CANCELLED.name());
+        doReturn(orderHasSeller("penjual1"))
+                .when(orderRepository).findAllByListings_SellerUsername_AndStatus("penjual1", OrderStatus.WAITINGPAYMENT.name());
         List<Order> results = orderService.findAllWithSeller(token);
         assertEquals(results, orders);
     }
 
     @Test
-    void testDeleteAllWithListing(){
+    void testFailAllWithListing(){
         Listing listing1 = listingBuilder.reset()
                 .addId(UUID.fromString("eb558e9f-1c39-460e-8860-71af6af63bd6"))
                 .addSellerUsername("penjual1")
@@ -318,8 +399,12 @@ public class OrderServiceTest {
                 .addName("Sampo Cap Bambang")
                 .build();
 
-        orderService.deleteAllWithListing(listing1);
-        verify(orderRepository,times(1)).deleteOrdersByListings_Id(listing1.getId());
+        Session mockedSession = Mockito.mock(Session.class);
+        Filter mockedFilter = Mockito.mock(Filter.class);
+        when(entityManager.unwrap(Session.class)).thenReturn(mockedSession);
+        when(mockedSession.enableFilter("deletedProductFilter")).thenReturn(mockedFilter);
+        orderService.failAllWithListing(listing1);
+        verify(orderRepository,times(1)).findOrdersByListings_Id(listing1.getId());
     }
 
     private HttpEntity<String> createHTTPHeader(){
